--- a/LECTURE4.Rmd
+++ b/LECTURE4.Rmd
@@ -166,7 +166,7 @@ Your model should look something like this! (if you don't already have a model l
 **Q:** What happens if population size starts out *at* carrying capacity?  [tophat]  
 **Q:** What happens if population size starts out *above* carrying capacity? [tophat]    
 **Q:** Is this a stable equilibrium? [tophat]    
-**Q:** Can a wild population ever be at a non-stable equilibrium? What about a stable equilibrium?    
+**Q:** Can a wild population ever be at a non-stable equilibrium? What about a stable equilibrium? Why is it important to know about non-stable equilibria?
 
 8. Consider the basic logistic growth equation:   
 
@@ -178,12 +178,13 @@ Pull up your InsightMaker model for basic logistic growth with an $r_{max}$ term
 
 Make your initial population size very small compared to carrying capacity.     
 
-**Q:** What happens if $r$ is zero? What happens to carrying capacity?  
-**Q:** Which population is more likely to be found at or near K in nature? A population with very large $r$ or very small $r$?   
+**Q:** What happens if $r$ is zero? What happens to carrying capacity?      
+**Q:** Which population is more likely to be found at or near K in nature? A population with very large $r$ or very small $r$?     
+**Q:** How does this discussion relate to the concept of "r-selected" and "K-selected" species?
+ 
 
 **Q:** Is a high value of $r$ good or bad for conservation?
 
-**Q:** How does this discussion relate to the concept of "r-selected" and "K-selected" species?
 
 
 [--go to next lecture--](LECTURE5.html)
