--- a/LECTURE7.Rmd
+++ b/LECTURE7.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Matrix population models"
 author: "NRES 470/670"
-date: "Spring 2019"
+date: "Spring 2020"
 output: 
   html_document: 
     theme: spacelab
@@ -33,6 +33,23 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 
 ```
 
+
+### Upcoming midterm exam
+
+**when and where** The first midterm exam (out of two) is coming up next Monday **March 2**. You will have the whole 50 minute class period to take the exam. The exam will be in our regular classroom. 
+
+**what** The exam will cover:
+
+- All material in Chapters 1-3 of the Gotelli book *except matrix population models*.   
+- All material covered in lectures through the "Age-structured populations" lecture (not including today's lecture on matrix population models).   
+- All material covered in labs 1-3.    
+- Ch. 1 of "Beyond Connecting the Dots"    
+
+*The exam will consist of a mixture of multiple-choice and short-answer questions.*      
+
+*Please bring a calculator- a regular scientific calculator is fine (not absolutely necessary, but it could be helpful for at least one question on the exam!)*
+
+Any questions?
 
 # Matrix population models
 
