--- a/LECTURE6.Rmd
+++ b/LECTURE6.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Age-structured populations"
 author: "NRES 470/670"
-date: "Spring 2019"
+date: "Spring 2020"
 output: 
   html_document: 
     theme: spacelab
@@ -13,23 +13,6 @@ output:
 knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 ```
 
-
-### Upcoming midterm exam
-
-**when and where** The first midterm exam (out of two) is coming up this Thursday **February 21**. You will have the whole 50 minute class period to take the exam. The exam will be in our regular classroom. 
-
-**what** The exam will cover:
-
-- All material in Chapters 1-3 of the Gotelli book *except matrix population models*.   
-- All material covered in lectures through the "Age-structured populations" lecture (not including today's lecture on matrix population models).   
-- All material covered in labs 1-3.    
-- Ch. 1 of "Beyond Connecting the Dots"    
-
-*The exam will consist of a mixture of multiple-choice and short-answer questions.*      
-
-*Please bring a calculator- a regular scientific calculator is fine (not absolutely necessary, but it could be helpful for at least one question on the exam!)*
-
-Any questions?
 
 ## When $d$ and $b$ depend on more than just density...
 
@@ -84,7 +67,7 @@ So, for many species per-capita birth rate and death rate are fundamentally depe
 
 ## Life table!
 
-Age-structured populations are often represented by a table called a **life table**. A life table represents a single **cohort** (group of organisms of the same species that are born during the same year) that is tracked across time. Here's an example:
+Age-structured populations are often represented by a table called a **life table**. A life table typically represents a single **cohort** (group of organisms of the same species that are born during the same year) that is tracked across time. Here's an example:
 
 ```{r include=FALSE}
 lifetable <- read.csv("life_table.csv")
@@ -130,6 +113,8 @@ There are three main types of survivorship curves (also called survivorship sche
 ![](frog1.jpg)
 
 ![](Survivorship_Curves.jpg)
+
+(Note the logarithmic scale on the Y axis!)
 
 **Q:** Which survivorship curve is the most common in nature?? [tophat]
 
