--- a/index.Rmd
+++ b/index.Rmd
@@ -28,7 +28,7 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 **Office hours**:   
 
 - Shoemaker: Wednesdays at 11am (1 hour) (FA 220E)     
-- Wurtz: TBD     
+- Wurtz: Tuesdays at noon (1 hour) (FA 235)     
   
 
 ### Texts  
