--- a/index.Rmd
+++ b/index.Rmd
@@ -136,6 +136,7 @@ rmarkdown::render('LAB6.Rmd',rmarkdown::pdf_document())
 rmarkdown::render('LAB7.Rmd',rmarkdown::pdf_document())
 
 rmarkdown::render('index.Rmd',rmarkdown::pdf_document())
+rmarkdown::render('schedule.Rmd',rmarkdown::pdf_document())
 rmarkdown::render('INTRO.Rmd',rmarkdown::pdf_document())
 rmarkdown::render('LECTURE1.Rmd',rmarkdown::pdf_document())
 rmarkdown::render('LECTURE2.Rmd',rmarkdown::pdf_document())  # latex_engine="xelatex"
